--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,20 @@
-.grid {
-    
+body {
+    margin: 0;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
+.etchpad {
+    display: flex;
+    width: 100%;
+    height: 50%;
+}
+
+.header {
+    background-color: black;
+    color: white;
+    margin-bottom: 20px;
 }
