--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,8 @@ body {
 
 .etchpad {
     display: flex;
-    width: 100%;
-    height: 50%;
+    justify-content: center;
+    margin-bottom: 50px;
 }
 
 .header {
@@ -18,3 +18,16 @@ body {
     color: white;
     margin-bottom: 20px;
 }
+
+.controls {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.test {
+    width:100px;
+    height:100px;
+    background-color: bisque;
+}
+
