updated margins on buttons

--- a/styles.css
+++ b/styles.css
@@ -50,5 +50,9 @@ body {
     background-color: black;
 }
 
+.button-controls {
+    margin-bottom: 10px;
+}
+
 /* palette link https://colorhunt.co/palette/112b3c205375f66b0eefefef */
 
