--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,20 @@
-body {
+html, body {
+    height: 100%;
     margin: 0;
     background-color: #112B3C;
+}
+
+a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    color: inherit;
 }
 
 .container {
     display: flex;
     align-items: center;
     flex-direction: column;
+    min-height: 100%;
+    margin-bottom: -50px;
 }
 
 .etchpad {
@@ -45,7 +53,33 @@ body {
 }
 
 .footer {
-    background-color: black;
+    background-color: #112B3C;
+    color: #EFEFEF;
+    height: 50px;
+    text-align: center;
+}
+
+.button {
+	background-color: #F66B0E;
+	border-radius:22px;
+	border:1px solid #F66B0E;
+	display:inline-block;
+	cursor:pointer;
+	color: #EFEFEF;
+	font-family: 'Zen Loop';
+	font-size:20px;
+	padding:16px 22px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+}
+
+.button:hover {
+	background-color:#5cbf2a;
+
+}
+.button:active {
+	position:relative;
+	top:1px;
 }
 
 .button-controls {
